# NeuroPC

./: .bioflux  .circmap  .evo  .evobudget  .ghost_evo  .neuro_rights  .neurorights.aln  .sim_organic  Cargo.toml  README.md  bostrom-sovereign-kernel-v2.ndjson  bostrom18sd2u_2026-01-30.neu  brainprint_host_extensions.ndjson  channel_integrity_monitor.aln  channel_latency_spec.aln  channel_recalibration_protocol.aln  channel_routing_map.aln  cobj_bf_nav_001_commit.cobj  deepseek_aln_20260126_ad0686.txt  deepseek_rust_20260126_85e0e3.rs  deepseek_rust_20260130_286deb.rs  deepseek_rust_20260130_4dd2a9.rs  deepseek_rust_20260130_8aa8aa.rs  deepseek_rust_20260130_c6fd01.rs  deepseek_rust_20260130_e8f81e.rs  deepseek_rust_20260130_fda5e8.rs  deepseek_solidity_20260130_2a4e59.txt  deepseek_text_20260130_93b1c4.txt  deepseek_text_20260130_e8bc61.txt  deepseek_yaml_20260130_a49529.yaml  duty_cycle_scheduler.aln  memory_navigation.brfn  neuro-workspace.biomech.manifest.aln  neuro-workspace.manifest.aln  preamble.md  qos_channel_multiplexing.aln  reality_os_neuro_extension.rs  session_2026_01_30_0600.ncsq  wireless_packet_schema.aln
.github/workflows/: deploy-scheduler.yml  neuralegion.yml  sovereign-kernel-ci.yml  sovereignty-ci.yml  validate-autonomy-manifest.yml
.neuro-cap/: neuromorph-microsteps-only.neuro-cap.aln
.schemas/: brainprint_research_v1.schema.json
Reality.os/corespecs/: ecobiostate.schema.json  tech_policy.schema.json  training_provenance.schema.json
bi_gateway/src/: lib.rs
bioscale_neuropc_mods/: Cargo.toml
bioscale_neuropc_mods/src/: lib.rs  metrics.rs  mods.rs  session.rs
biospectre-core/src/: co_governor.rs  lifeforce_governor.rs
biospectre-coresrc/: aichat_capabilities.rs  neuroconsent_yield.rs
brainprint-core/src/: export.rs  lib.rs  sovereign_export.rs
brainprint-macros/src/: lib.rs
consent/: ota_commit_ota_core_v2.cobj
crates/neuro-assistant-adapter/: Cargo.toml
crates/neuro-assistant-adapter/src/: adapter.rs  config.rs  error.rs  jupyter.rs  lib.rs
crates/neurorights-core/: Cargo.toml
crates/neurorights-core/src/: envelope.rs  lib.rs
crates/neurorights-firewall/: Cargo.toml
crates/neurorights-firewall/src/: lib.rs
docs/: From Proposal to Proof_ Verifying System Integrity.md  From-Sovereign-Microsteps-to-Scalable-Ecological-Governance-with-SMART-Evolution.md  NeuroPC-ALN-Handbook.md  organic_cpu_rust_framework_bioscale.md  spec-dids-and-subjectids.md  spec-index-canonical-filetypes.md
host/: lanes.js
k8s/sovereign-admission/: Cargo.toml
k8s/sovereign-admission/src/: main.rs
ledger/: nicotine_neuroprint.donutloop.aln
logs/: OrganicCpuQpuRuntime2026v1.aln  donutloopledger.aln  prompt-envelopes-2026-02.ndjson
manifests/: research-2026-02-05-autonomy-manifest.json  research-DATE-autonomy-manifest.schema.json
neuro_automagic/: Cargo.toml
neuro_automagic/src/: engine.rs  event.rs  integration_cargo.rs  integration_editor.rs  lib.rs  session.rs
neuro_automagic_core/: Cargo.toml
neuro_automagic_core/src/: automation.rs  lib.rs  model.rs  normalizer.rs  right.rs
notebooks/: neuro_pc_min_core.rs  neuro_pc_min_demo.rs
offline_tools/: snn_decoder_trainer.rs
organic_cpu_orchestrator/: Cargo.toml
organic_cpu_orchestrator/src/: cybernano_boot.rs  ffi_json.rs  insights.rs  json_api.rs  lib.rs  types.rs
policies/: biomech-integration-policy.bostrom.v1.json  biomech-integration-policy.rs  biomech-integration-policy.schema.json  bostrom-biorates-h5-v1.aln  bostrom-capability-neuromorph-ui-v1.capability.aln  bostrom-evolution-policy-v2.json  bostrom-neurorights-answer.v1.neurorights.json  bostrom-neurorights-v1.neurorights.json  bostrom-smart-2026-01.smart.json  bostrom-stake-v1.stake.aln  bostrom-viability-h5-v1.aln  bostrom_neurorights_v1.json  evolution_policy.schema.json  evolve_token.example.json  evolve_token.schema.json  homo-sapiens-neurorights-v1.neurorights.json  homo-sapiens-stake-v1.stake.aln  homo-sapiens-vkernel-v1.vkernel.aln  lifeforce.aln  morph_token.example.json  morph_token.schema.json  neuro-cap.neuro-print.v1.aln  neuro_invariants_policy.schema.json  neurorights_policy.schema.json  nexus_mappings.aln  power_token.example.json  power_token.schema.json  roh_evolve_bostrom_binding.aln  spec-index.md
profiles/: bostrom_primary.ocpu  per-turn-validation.profile.json
qpudatashards/: bostrom-alnshard-neuroobjects-v1.aln
schemas/: answer-log.schema.json  bioflux.rs  copilot_input.schema.json  copilot_output.schema.json  neuro_rights.rs  neuropc_terraform_proposal.schema.json
shards/: research-2026-02-05-autonomy-shard.alnshard
sovereigntycore/: Cargo.toml
sovereigntyndjson/: bostrom-sovereign-kernel-v2.ndjson
spec/: neuroxfs_spec.ndjson
specs/: aln_grammar.ebnf
src/: biophysical_reader_stub.rs  inner_ledger_nanoswarm_glue.rs  lib.rs  nanoswarm_rights.rs  neuro_communicator.rs  nexus_endpoint_mapper.rs  personal_microspace.rs  sovereignty_core.rs
tests/: ota_evolve_consent.rs
(+208 files in other folders)
