[package]
name = "bioscale_neuropc_mods"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Biocompatible NeuroPC bioscale mods: metrics, sessions, and safe automation rules bound to .aln shards."
repository = "https://github.com/Doctor0Evil/NeuroPC"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
