[package]
name = "neuro-assistant-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "NeuroPC assistant adapter: neurorights-bound envelope -> backend + donutloop logging."
repository = "https://github.com/Doctor0Evil/NeuroPC"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

organiccpualn = { path = "../organiccpualn" }
neurorights-core = { path = "../neurorights-core" }
neurorights-firewall = { path = "../neurorights-firewall" }
sovereigntycore = { path = "../sovereigntycore" }
