[package]
name = "neurorights-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core neurorights guard logic for OrganicCPU/NeuroPC prompt envelopes."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
organiccpualn = { path = "../organiccpualn" } # for NeurorightsBoundPromptEnvelope etc.
