[package]
name = "sovereign-admission"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.90", features = ["runtime", "derive", "client"] }
kube-runtime = "0.90"
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_28"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
prometheus-http-query = "0.6"
sovereigntycore = { path = "../../crates/sovereigntycore" }
organiccpualn = { path = "../../crates/organiccpualn" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
